--- a/css/styles_calc.css
+++ b/css/styles_calc.css
@@ -211,9 +211,8 @@ header a:hover {
     display: flex;
     flex-direction: column;
     /*background: #005eac;*/
-    flex: auto;
+    flex-basis: auto;
     max-height: 40vh;
-    min-width: auto;
     overflow: auto;
     margin: 0.5vh 0 0.5vh 0.5vh;
 }
@@ -222,7 +221,6 @@ header a:hover {
     display: flex;
     flex-direction: column;
     /*background: #00ac87;*/
-    flex: auto;
     max-height: 40vh;
     overflow: auto;
     margin: 0.5vh;
@@ -286,6 +284,58 @@ header a:hover {
 
 .imitation_div {
     overflow: auto;
+}
+
+.imitation_table td {
+    width: 95px;
+    max-width: 95px;
+    position: relative;
+}
+
+.imitation_table td:focus:after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    border: 1px solid #6ead3a;
+}
+
+.right_context_menu{
+    list-style: none;
+    background: #4c4947;
+    width: 150px;
+    max-height: 200px;
+    overflow: auto;
+    font-size: 12px;
+    padding: 0;
+    margin: 0;
+    z-index: 99999;
+    position: fixed;
+    display: none;
+}
+
+.right_context_menu.active {
+    display: block;
+}
+
+.right_context_menu li {
+    width: 100%;
+    padding: 0px 5px 0px 5px;
+    line-height: 35px;
+    box-sizing: border-box;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    cursor: pointer;
+    color: #ceccce;
+}
+
+.right_context_menu li:hover {
+    color: #f4f8f9;
+    background: #3a3a3a;
+    transition-duration: 0.3s;
 }
 
 /*checkbox*/
