--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -18,6 +18,7 @@
     --color_text_dark_on_secondary: #0a0a0a;
     --color_text_light_on_secondary: #838b96;
     --color_text_light_on_secondary_dark: #72797f;
+    --color_border: #d4d4d4;
     --color_error: #db4139;
 }
 
@@ -169,6 +170,7 @@ header a:hover, footer a:hover {
     flex: 1;
     overflow: auto;
     color: var(--color_text_dark_on_secondary);
+    font-size: 1rem;
 }
 
 input {
@@ -178,7 +180,7 @@ input {
     padding: 0.25rem;
     font-family: "OpenSans_Regular";
     font-size: 1rem;
-    border: 0.1rem solid var(--color_secondary_dark);
+    border: 0.1rem solid var(--color_border);
     border-radius: 0px;
     outline: none;
     transition: 0.3s;
@@ -222,7 +224,7 @@ input[type="checkbox"]+label::before {
     height: 1rem;
     flex-shrink: 0;
     flex-grow: 0;
-    border: 0.1rem solid var(--color_secondary_dark);
+    border: 0.1rem solid var(--color_border);
     background: var(--color_secondary);
     margin-right: 0.25rem;
     background-repeat: no-repeat;
@@ -236,4 +238,25 @@ input[type="checkbox"]:checked+label::before {
     background-color: var(--color_primary);
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
     transition: 0.3s;
+}
+
+div.table_header {
+    position: fixed;
+}
+
+table {
+    table-layout: fixed;
+    border-collapse: collapse;
+    width: max-content;
+    empty-cells: show;
+    outline: none;
+}
+
+th, td {
+    width: 6rem;
+    border: 0.1rem solid #d4d4d4;
+    padding: 2px 5px;
+    outline: none;
+    overflow: hidden;
+    text-overflow: clip;
 }
