--- a/css/home_styles.css
+++ b/css/home_styles.css
@@ -1,38 +1,51 @@
-div.home {
+div.table_wrapper {
+    display: flex;
+    flex: 1;
+    overflow: hidden;
+}
+
+div.table {
+    flex: 1;
+    display: flex;
     flex-direction: column;
+    overflow: auto;
+}
+
+.wrapper {
     display: none;
 }
 
-.home:first-of-type {
+.wrapper:first-of-type {
     display: flex;
 }
 
-div.table_header, 
-div.table_body {
-}
+div.table_header,
+div.table_body {}
 
 div.table_header {
     margin: 0.25rem 0.25rem 0 0.25rem;
+    /*margin: 25px 25px 0 25px;*/
+    overflow: hidden;
 }
 
 table.table_header {
-   position: fixed;
+    /*margin: 0.25rem 0.25rem 0 0.25rem;*/
+    position: relative;
 }
 
 div.table_body {
     margin: 0 0.25rem 0.25rem 0.25rem;
+    /*margin: 0 25px 25px 25px;*/
     overflow: auto;
     flex: 1;
 }
 
-table.table_body {
-
+.wrapper div.table_wrapper:nth-of-type(2) div.table_header {
+    margin-top: 0;
 }
 
-.empty_table {
-    opacity: 0;
-}
+table.table_body {}
 
-.empty_table th {
-    border-bottom-style: none;
+.map {
+    background: #444;
 }
