--- a/css/home_styles.css
+++ b/css/home_styles.css
@@ -19,10 +19,7 @@ div.table {
     display: flex;
 }
 
-div.table_header,
-div.table_body {}
-
-div.table_header {
+div.table_header_wrapper {
     margin: 0.25rem 0.25rem 0 0.25rem;
     /*margin: 25px 25px 0 25px;*/
     overflow: hidden;
@@ -33,19 +30,35 @@ table.table_header {
     position: relative;
 }
 
-div.table_body {
+div.table_body_wrapper {
     margin: 0 0.25rem 0.25rem 0.25rem;
     /*margin: 0 25px 25px 25px;*/
     overflow: auto;
     flex: 1;
+    position: relative;
 }
 
-.wrapper div.table_wrapper:nth-of-type(2) div.table_header {
+table.table_body {
+}
+
+.wrapper div.table_wrapper:nth-of-type(2) div.table_header_wrapper {
     margin-top: 0;
 }
 
-table.table_body {}
-
 .map {
     background: #444;
+}
+
+.cell_selection {
+    position: absolute;
+    display: none;
+    border: 0.1rem solid var(--color_primary);
+    box-sizing: border-box;
+    pointer-events: none;
+    z-index: 2;
+    
+}
+
+.cell_selection.active {
+    display: block;
 }
