load table, save table, popup

--- a/css/auth_styles.css
+++ b/css/auth_styles.css
@@ -18,6 +18,10 @@
     display: none;
 }
 
+.info_span.active {
+    display: block;
+}
+
 .auth_form {
     display: flex;
     flex-direction: column;
