--- a/css/calc_styles.css
+++ b/css/calc_styles.css
@@ -1,10 +1,24 @@
+/*tab0*/
+
 .selection_inputs_wrapper {
     overflow: auto;
-    margin: 0.25rem 0.25rem 0.25rem 0.25rem;
+    margin: 0.25rem;
     white-space: nowrap;
 }
 
 .selection_inputs_wrapper li {
     display: inline-block;
     margin-right: 0.25rem;
+}
+
+/*tab1*/
+
+.charts_container {
+    overflow: auto;
+    margin: 0.25rem;
+}
+
+.plotly_div {
+    background: #989898;
+    height: 20rem;
 }
