--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -221,6 +221,7 @@ input:active {
 }
 
 input[type="submit"]:hover,
+input[type="button"]:hover,
 input[type="checkbox"]+label:hover {
     cursor: pointer;
 }
