--- a/css/calc_styles.css
+++ b/css/calc_styles.css
@@ -2,8 +2,6 @@
     display: none;
 }
 
-/*tab0*/
-
 .selection_inputs_wrapper {
     overflow: auto;
     margin: 0.25rem;
@@ -15,23 +13,48 @@
     margin-right: 0.25rem;
 }
 
-/*tab1*/
-
 .charts_container {
     margin: 0.25rem;
 }
 
-.chart_div  {
+hr {
+    display: none;
+    border: none;
+    color: var(--color_primary);
+    background-color: var(--color_primary_light);
+    width: 100%;
+    height: 0.1rem;
+    margin: 0 0 0.25rem 0;
+}
+
+
+
+hr.active {
+    display: block;
+}
+
+.chart_div {
     display: flex;
     flex-direction: column;
     margin-bottom: 0.25rem;
 }
 
 .plotly_div {
-    background: #989898;
-    height: 20rem;
-    width: 20rem;
+    background: var(--color_secondary);
+    height: 30rem;
+    width: 60rem;
+    max-width: 100%;
     align-self: center;
+}
+
+.plotly {
+    transition-property: opacity;
+    transition-duration: 0.2s;
+    opacity: 100%;
+}
+
+.plotly.resizing {
+    opacity: 0;
 }
 
 .param_form_div {
@@ -52,17 +75,15 @@
     margin-left: 0.25rem;
 }
 
-
-.chart_rectangles {
-    display: flex;
-    white-space: nowrap;
-    margin-top: 0.25rem;
-}
+.chart_rectangles {}
 
 .chart_rectangle {
+    display: inline-block;
     background: var(--color_secondary);
     color: var(--color_text_dark_on_secondary);
     padding: 0.25rem;
+    margin-top: 0.25rem;
+    margin-right: 0.25rem;
     border: 0.1rem solid var(--color_border);
     transition: 0.3s;
     outline: none;
@@ -74,8 +95,7 @@
     cursor: pointer;
 }
 
-.chart_rectangle:focus,
-.chart_rectangle:active {
+.chart_rectangle.active {
     border-color: var(--color_primary);
     transition: 0.3s;
 }
@@ -83,4 +103,21 @@
 .chart_settings {
     display: none;
     margin-top: 0.25rem;
+    width: 100%;
+    border: 0.1rem solid var(--color_border);
+}
+
+.chart_settings.active {
+    display: flex;
+}
+
+.chart_settings .chart_data {
+    background: #989899;
+    padding: 0.25rem;
+}
+
+.chart_settings .chart_stuff {
+    background: #7e7ea8;
+    padding: 0.25rem;
+    flex: 1;
 }
