--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -210,24 +210,28 @@ input::placeholder {
     color: var(--color_text_light_on_secondary);
 }
 
-input:hover,
-select:hover,
+input:disabled {
+    opacity: 0.5;
+}
+
+input:not(:disabled):hover,
+select:not(:disabled):hover,
 input[type="checkbox"]:not(:disabled):not(:checked)+label:hover::before {
     border-color: var(--color_primary_light);
     transition: 0.3s;
 }
 
-input:not([type="submit"]):focus,
-select:focus,
-input:active,
-select:active {
+input:not(:disabled):not([type="submit"]):focus,
+select:not(:disabled):focus,
+input:not(:disabled):active,
+select:not(:disabled):active {
     border-color: var(--color_primary);
     transition: 0.3s;
 }
 
-input[type="submit"]:hover,
-input[type="button"]:hover,
-input[type="checkbox"]+label:hover {
+input[type="submit"]:not(:disabled):hover,
+input[type="button"]:not(:disabled):hover,
+input[type="checkbox"]:not(:disabled)+label:hover {
     cursor: pointer;
 }
 
@@ -235,6 +239,14 @@ input[type="checkbox"] {
     position: absolute;
     z-index: -1;
     opacity: 0;
+}
+
+input[type="checkbox"]:disabled + label {
+    opacity: 0.5;
+}
+
+input[type="checkbox"]:disabled + label::before {
+    opacity: 0.5;
 }
 
 input[type="checkbox"]+label {
@@ -247,17 +259,20 @@ input[type="checkbox"]+label {
 input[type="checkbox"]+label::before {
     content: "";
     display: inline-block;
-    width: 1rem;
-    height: 1rem;
     flex-shrink: 0;
     flex-grow: 0;
     border: 0.1rem solid var(--color_border);
     background: var(--color_secondary);
-    margin-right: 0.25rem;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 50%;
     transition: 0.3s;
+}
+
+input[type="checkbox"].standart_checkbox+label::before {
+    margin-right: 0.25rem;
+    width: 1rem;
+    height: 1rem;
 }
 
 input[type="checkbox"]:checked+label::before {
@@ -270,7 +285,6 @@ input[type="checkbox"]:checked+label::before {
 table {
     table-layout: fixed;
     border-collapse: collapse;
-    width: fit-content;
     empty-cells: show;
     outline: none;
     background-clip: padding-box;
@@ -278,9 +292,8 @@ table {
 
 th,
 td {
-    width: 6rem;
-    border: 0.1rem solid #d4d4d4;
-    padding: 2px 5px;
+    padding: 0.15rem 0.25rem;
+    border: 0.1rem solid var(--color_border);
     outline: none;
     overflow: hidden;
     text-overflow: clip;
@@ -289,8 +302,20 @@ td {
 
 th {
     background: var(--color_secondary_dark);
-    border-bottom-style: none;
     font-weight: normal;
+}
+
+table.main_table {
+    width: fit-content;
+}
+
+table.main_table th, 
+table.main_table td {
+    width: 6rem;
+}
+
+table.main_table th {
+    border-bottom-style: none;
 }
 
 .cell_selection {
