--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -221,6 +221,10 @@ input:disabled {
     opacity: 0.5;
 }
 
+input.error {
+    border-color: var(--color_error);
+}
+
 input:not(:disabled):hover,
 select:not(:disabled):hover,
 input[type="checkbox"]:not(:disabled):not(:checked)+label:hover::before {
@@ -339,7 +343,8 @@ table.main_table th {
 }
 
 .cell_selection.transition,
-td.transition {
+td.transition,
+input.transition {
     transition-duration: 0.2s;
 }
 
