--- a/css/common_styles.css
+++ b/css/common_styles.css
@@ -53,7 +53,9 @@ body {
 }
 
 .preloader {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .loader {
@@ -62,10 +64,6 @@ body {
 
 span.error {
     color: var(--color_error);
-    transform: translate(-50%, -50%);
-    position: absolute;
-    top: 50%;
-    left: 50%;
     height: 0;
     opacity: 0;
 }
@@ -424,7 +422,7 @@ div.popup {
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.19);
     padding: 0.25rem;
     text-align: center;
-    max-width: 24rem;
+    max-width: 34rem;
     animation: close ease-out 0.2s forwards;
 }
 
